--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-jupyter==1.0.0
-notebook==7.0.3
 pandas==2.1.0
-openpyxl==3.1.2
-tables==3.8.0
 PsychoPy==2023.1.3
-ipykernel==6.25.2
 Unidecode==1.3.6
+numpy==1.23.5
